finished total specials and test

--- a/app/views/comedians.erb
+++ b/app/views/comedians.erb
@@ -19,6 +19,7 @@
   <ul>
     <li>City: <%= comedian.city %></li>
     <li>Age: <%= comedian.age %></li>
+    <li>Total Specials: <%= comedian.specials.count %></li>
   </ul>
   <h2> Specials </h2>
   <% comedian.specials.each do |special| %>
