--- a/app/views/comedians.erb
+++ b/app/views/comedians.erb
@@ -1,14 +1,16 @@
+
+
 <h1> Comedians </h1>
 <h2> Statistics </h2>
 
 <h3> Average Tv Special Runtime </h3>
-  <p> <%= Special.average_runtime %> <p>
+  <p> <%= @specials.average_runtime %> <p>
 <h3> Total Tv Specials </h3>
   <p> <%= @specials.count %> <p>
 <h3> Average Age </h3>
-  <p> <%= Comedian.average_age %> <p>
+  <p> <%= @comedians.average_age %> <p>
 <h3> Cities </h3>
-  <% Comedian.uniq_cities.each do |city| %>
+  <% @comedians.uniq_cities.each do |city| %>
     <ul>
        <%= city %>
     </ul>
@@ -30,5 +32,5 @@
     <% end %>
   <% else %>
     <%= 'No specials yet' %>
-  <% end %> 
+  <% end %>
 <% end %>
