--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -1,6 +1,12 @@
-<form class="new-comedian" action="/comedians" method="post">
-  <input type="text" name="comedian[name]" placeholder="Name">
-  <input type="text" name="comedian[age]" placeholder="Age">
-  <input type="text" name="comedian[city]" placeholder="City">
-  <input type="submit" value="Create">
-</form>
+<div class='b'>
+  <header>
+    <h1> New Comedian </h1>
+  </header>
+
+  <form class="new-comedian" action="/comedians" method="post">
+    <input type="text" name="comedian[name]" placeholder="Name">
+    <input type="text" name="comedian[age]" placeholder="Age">
+    <input type="text" name="comedian[city]" placeholder="City">
+    <input type="submit" class="button" value="Create Comedian">
+  </form>
+</div>
